--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Stellar by HTML5 UP</title>
+		<title>Patricio Saavedra Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,12 +16,6 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-
-				<!-- Header -->
-					<header id="header" class="alt">						
-						<h1>Portfolio</h1>
-						<h3>by Patricio Saavedra <h3>
-					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
@@ -43,13 +37,11 @@
 											<h2>Professional Profile</h2>
 										</header>
 										<p>I am passionate about data and work methodically and with dedication. 
-											This translates into a strong commitment to generating innovative 
-											and precise solutions. Additionally, I am seeking an environment 
-											that promotes teamwork and values a positive work atmosphere, 
-											while constantly challenging me to push my limits and grow 
-											professionally.</p>
+											I have knowledge in SQL, Python, and Tableau. I am seeking a job where 
+											a positive work environment is valued, while also challenging me to 
+											push my limits and grow professionally.</p>
 									</div>
-									<span class="image"><img src="PATRICIO SAAVEDRA.jpg" alt="" /></span>
+									<span class="image"><img src="images\PATRICIO SAAVEDRA.jpg" alt="" /></span>
 								</div>
 							</section>
 
@@ -103,7 +95,7 @@
 									}
 
 									.chipax-img {
-										width: 195px; /* Ancho específico para la imagen de Chipax-SQL */
+										width: 250px; /* Ancho específico para la imagen de House Price Boston */
 									}
 
 									.covid-img {
@@ -155,9 +147,9 @@
 											<p><a href="https://github.com/PatricioSaavedraV/Nashville-Housing/blob/main/Nashville%20Housing.sql" class="button">View Project</a></p>
 										</li>
 										<li>
-											<img src="images/chipax.jpg" alt="Chipax-SQL" class="feature-img chipax-img">
-											<h3>Chipax-SQL</h3>
-											<p><a href="https://github.com/PatricioSaavedraV/Querys-SQL" class="button">View Project</a></p>
+											<img src="images\boston.jpg" alt="Chipax-SQL" class="feature-img chipax-img">
+											<h3>House Price Boston</h3>
+											<p><a href="https://github.com/PatricioSaavedraV/House-Prices/blob/main/House_Prices.ipynb" class="button">View Project</a></p>
 										</li>
 										<li>
 											<img src="images/coronavirus.jpg" alt="Covid Analysis" class="feature-img covid-img">
