--- a/index.html
+++ b/index.html
@@ -48,25 +48,25 @@
 						<img src="images/istockphoto-1299120566-612x612.jpg" alt="Movies Correlation" class="project-image">
 						<h3>Movies Correlation</h3>
 						<p><a
-								href="https://github.com/PatricioSaavedraV/Movie-Correlation-project/blob/main/Movie_Correlation_project.ipynb"
+								href="https://github.com/PatricioSaavedraV/Movie-Correlation-project"
 								class="button">View Project</a></p>
 					</div>
 					<div class="project-card">
 						<img src="images/midtown-nashville-real-estate.jpg" alt="Nashville Housing" class="project-image">
 						<h3>Nashville Housing</h3>
-						<p><a href="https://github.com/PatricioSaavedraV/Nashville-Housing/blob/main/Nashville%20Housing.sql"
+						<p><a href="https://github.com/PatricioSaavedraV/Nashville-Housing"
 								class="button">View Project</a></p>
 					</div>
 					<div class="project-card">
 						<img src="images\boston.jpg" alt="Chipax-SQL" class="project-image">
 						<h3>House Price Boston</h3>
-						<p><a href="https://github.com/PatricioSaavedraV/House-Prices/blob/main/House_Prices.ipynb"
+						<p><a href="https://github.com/PatricioSaavedraV/House-Prices-Boston"
 								class="button">View Project</a></p>
 					</div>
 					<div class="project-card">
 						<img src="images/coronavirus.jpg" alt="Covid Analysis" class="project-image">
 						<h3>Covid Analysis</h3>
-						<p><a href="https://github.com/PatricioSaavedraV/Covid/blob/main/Covid.sql" class="button">View Project</a>
+						<p><a href="https://github.com/PatricioSaavedraV/Covid" class="button">View Project</a>
 						</p>
 					</div>
 					<div class="project-card">
@@ -78,6 +78,12 @@
 						<img src="images/Tableau-logo-removebg-preview.png" alt="Tableau" class="project-image">
 						<h3>Tableau</h3>
 						<p><a href="https://public.tableau.com/app/profile/patricio.saavedra2380/vizzes" class="button">View
+								Project</a></p>
+					</div>
+					<div class="project-card">
+						<img src="images\role2.png" alt="Power BI" class="project-image">
+						<h3>Data Professional Survey</h3>
+						<p><a href="https://github.com/PatricioSaavedraV/Data-Professional-Survey" class="button">View
 								Project</a></p>
 					</div>
 				</div>
