--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
 						<p><a href="https://github.com/PatricioSaavedraV/Data-Professional-Survey" class="button">View
 								Project</a></p>
 					</div>
+					<div class="project-card">
+						<img src="images\Premier-League-Emblem.png" alt="Power BI" class="project-image">
+						<h3>Shooting stats PL 2023/24</h3>
+						<p><a href="https://github.com/PatricioSaavedraV/Shooting-Stats-Premier-League" class="button">View
+								Project</a></p>
+					</div>
 				</div>
 			</section>
 			<section id="second" class="main special">
